--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ crate-type = ["cdylib"]
 
 [dependencies]
 godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
-libeq = { git = "https://github.com/bryab/libeq", branch = "archive-reader" }
+libeq = { git = "https://github.com/bryab/libeq", branch = "godot-eqloader" }
 image = { version="*", default-features = false, features=["bmp"]}
 wav = {version="*"}
 owning_ref = "*"
