update to newer libeq fragment names

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ crate-type = ["cdylib"]
 
 [dependencies]
 godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
-libeq = { git = "https://github.com/bryab/libeq", branch = "godot-eqloader" }
+libeq = { git = "https://github.com/cjab/libeq.git", branch = "master" }
 image = { version="0.*", default-features = false, features=["bmp"]}
 wav = {version="1.*"}
 owning_ref = "0.*"
